2010-02-15  Roland McGrath  <roland@redhat.com>

	* Makefile.am: Use config/eu.am for common stuff.

	* asm-tst9.c (main): Rename local to avoid shadowing another local.

2009-07-22  Roland McGrath  <roland@redhat.com>

	* addrcfi.c: Update dwarf_frame_{cfa,register} calling convention.

2009-07-08  Roland McGrath  <roland@redhat.com>

	* addrcfi.c: New file.
	* Makefile.am (noinst_PROGRAMS): Add it.
	(addrcfi_LDADD): New variable.

2009-05-07  Petr Machata  <pmachata@redhat.com>

	* testfile51.bz2: New data file.
	* dwarf-getmacros.c: New test core.
	* run-dwarf-getmacros.sh: New test wrapper.
	* Makefile.am (TESTS, EXTRA_DIST, noinst_PROGRAMS): Add them.
	(dwarf_getmacros_LDADD): New variable.

2009-04-23  Ulrich Drepper  <drepper@redhat.com>

	* Makefile [BUILD_STATIC] (libdw): Add $(zip_LIBS).
	(rdwrmmap_LDADD): Add $(libmudflap).

2009-04-21  Roland McGrath  <roland@redhat.com>

	* testfile50.bz2: New data file.
	* Makefile.am (EXTRA_DIST): Add it.
	* run-dwfl-addr-sect.sh: Add a case using it.

2008-12-31  Ulrich Drepper  <drepper@redhat.com>

	* testfile44.S.bz2: Add tests for dppd, dpps, insertps, movntdqa,
	mpsadbw, packusdw, pblendvb, pblendw, pcmpeqq, pcmpestri, pcmpestrm,
	pcmpistri, pcmpistrm, pcmpgtq, phminposuw, pinsrb, pinsrd, pmaxsb,
	pmaxsd, pmaxud, pmaxuw, pminsb, pminsd, pminud, pminuw, pmovsxbw,
	pmovsxbd, pmovsxbq, pmovsxwd, pmovsxwq, pmovsxdq, pmovsxbw, pmovsxbd,
	pmovsxbq, pmovsxwd, pmovsxwq, pmovsxdq, pmuldq, pmulld, popcnt, ptest,
	roundss, roundps, roundpd, and roundsd.
	* testfile45.S.bz2: Likewise.
	* testfile44.expect.bz2: Adjust accordingly.
	* testfile45.expect.bz2: Likewise.

	* testfile44.S.bz2: Add tests for blendvpd and blendvps.
	* testfile45.S.bz2: Likewise.
	* testfile44.expect.bz2: Adjust accordingly.
	* testfile45.expect.bz2: Likewise.

2008-12-30  Ulrich Drepper  <drepper@redhat.com>

	* testfile44.S.bz2: Add tests for blendpd and blendps.
	* testfile45.S.bz2: Likewise.
	* testfile44.expect.bz2: Adjust accordingly.